Se avanza con cambios en interfaz y js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,23 @@
     <script defer src="fetch.js"></script>
 </head>
 <body>
-    <h1>Desarrollado por Fabian Leon</h1>
-    <h2>Mi primera API</h2>
+
+
+    <header>
+
+
+        <h1><a href="index.html"> First API</h1></a>
+        <ul>
+
+
+            <li>Contact</li>
+        </ul>
+
+    </header>
+
+    <div id="usuarios">
+
+        <span class="loading">Cargando...</span>
+    </div>
 </body>
 </html>
