--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyFirstApi</title>
-    <link rel="stylesheet" href="index.css">
     <script defer src="fetch.js"></script>
-</head>
-<body>
-
-
+    <link rel="stylesheet" href="index.css" />
+    
+  </head>
+  <body>
     <header>
-
-
-        <h1><a href="index.html"> First API</h1></a>
-        <ul>
-
-
-            <li>Contact</li>
-        </ul>
-
+      <div class="logo">
+        <a href="index.html"><img src="en-todo-el-mundo.png" alt=""></a>
+      </div>
+      <div class="empresa">
+        <h2 class="neonText">First API</h2>
+      </div>
+      <nav>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="" class="nav-link">Contact</a>
+        <a href="" class="nav-link">About</a>
+      </nav>
     </header>
 
     <div id="usuarios">
-
-        <span class="loading">Cargando...</span>
+      <span class="loading">Cargando...</span>
     </div>
-</body>
+    <div id="janet">
+      <span class="loading">Cargando...</span>
+    </div>
+  </body>
 </html>
