--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@
     <div id="janet">
       <span class="loading">Cargando...</span>
     </div>
+    <br>
+    <form name="contact" netlify>
+      <p>
+        <label>Name <input type="text" name="name" /></label>
+      </p>
+      <p>
+        <label>Email <input type="email" name="email" /></label>
+      </p>
+      <p>
+        <button type="submit">Send</button>
+      </p>
+    </form>
   </body>
 </html>
